updated mobile view

--- a/main.html
+++ b/main.html
@@ -6,6 +6,10 @@
     <title>ARPMATICS</title>
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="npm/swiper%408/swiper-bundle.min.css" />
+    <link
+  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+  rel="stylesheet"
+/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <link href="style.css" rel="stylesheet" type="text/css" />
@@ -135,119 +139,119 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
 
                     <li class="right-menu">
-                        <a class="dd-button nav-link" href="web-development.html" type="button">web development</a>
+                        <a class="dd-button nav-link" href="#" type="button">web development</a>
                         <div class="dd-menu">
                             <ul>
                                 <li>
-                                    <a class="dd-item" href="website-design.html">Website Design</a>
+                                    <a class="dd-item" href="#">Website Design</a>
                                 </li>
                                 <li>
-                                    <a class="dd-item" href="wordpress-website.html">Wordpress Websites</a>
+                                    <a class="dd-item" href="#">Wordpress Websites</a>
                                 </li>
                                 <li>
-                                    <a class="dd-item" href="e-commerce-website.html">E-Commerce Websites</a>
+                                    <a class="dd-item" href="#">E-Commerce Websites</a>
                                 </li>
                                 <li>
-                                    <a class="dd-item" href="cms-website.html">Custom CMS Website</a>
+                                    <a class="dd-item" href="#">Custom CMS Website</a>
                                 </li>
                                 <li>
-                                    <a class="dd-item" href="html-website.html">HTML Websites</a>
+                                    <a class="dd-item" href="#">HTML Websites</a>
                                 </li>
                                 <li>
-                                    <a class="dd-item" href="shopify-website.html">Shopify Websites</a>
+                                    <a class="dd-item" href="#">Shopify Websites</a>
                                 </li>
                                 <li>
-                                    <a class="dd-item" href="mobile-development.html">Mobile App Development</a>
+                                    <a class="dd-item" href="#">Mobile App Development</a>
                                 </li>
                                 <li>
-                                    <a class="dd-item" href="web-app.html">Website App Development
+                                    <a class="dd-item" href="#">Website App Development
                                     </a>
                                 </li>
                                 <li>
                                     <a class="dd-item" href="#">Custom App Development</a>
                                 </li>
                                 <li>
-                                    <a class="dd-item" href="email-hosting.html">Email Hosting</a>
+                                    <a class="dd-item" href="#">Email Hosting</a>
                                 </li>
                                 <li>
-                                    <a class="dd-item" href="website-hosting.html">Website Hosting</a>
+                                    <a class="dd-item" href="#">Website Hosting</a>
                                 </li>
                             </ul>
                         </div>
                     </li>
 
                     <li class="right-menu">
-                        <a class="dd-button nav-link" href="digital-marketing.html" type="button">
+                        <a class="dd-button nav-link" href="#" type="button">
                             Digital Marketing
                         </a>
                         <div class="dd-menu">
                             <ul>
                                 <li>
-                                    <a class="dd-item" href="seo.html">Search Engine Optimization</a>
+                                    <a class="dd-item" href="#">Search Engine Optimization</a>
                                 </li>
                                 <li>
-                                    <a class="dd-item" href="social-media-optimization.html">Social Media
+                                    <a class="dd-item" href="#">Social Media
                                         Optimization</a>
                                 </li>
                                 <li>
-                                    <a class="dd-item" href="search-engine-marketing.html">Search Engine Marketing</a>
+                                    <a class="dd-item" href="#">Search Engine Marketing</a>
                                 </li>
                                 <li>
-                                    <a class="dd-item" href="blogs-content-writing.html">Blogs/Content Writing</a>
+                                    <a class="dd-item" href="#">Blogs/Content Writing</a>
                                 </li>
                                 <li>
-                                    <a class="dd-item" href="social-media-marketing.html">Social Media Marketing</a>
+                                    <a class="dd-item" href="#">Social Media Marketing</a>
                                 </li>
                                 <li>
-                                    <a class="dd-item" href="inbound-marketing.html">Inbound Marketing</a>
+                                    <a class="dd-item" href="#">Inbound Marketing</a>
                                 </li>
                                 <li>
-                                    <a class="dd-item" href="sms-marketing.html">SMS Marketing</a>
+                                    <a class="dd-item" href="#">SMS Marketing</a>
                                 </li>
                                 <li>
-                                    <a class="dd-item" href="outbound-marketing.html">Outbound Marketing</a>
+                                    <a class="dd-item" href="#">Outbound Marketing</a>
                                 </li>
                                 <li>
-                                    <a class="dd-item" href="email-marketing.html">Email Marketing</a>
+                                    <a class="dd-item" href="#">Email Marketing</a>
                                 </li>
                                 <li>
-                                    <a class="dd-item" href="demand-generation.html">Demand Generation</a>
+                                    <a class="dd-item" href="#">Demand Generation</a>
                                 </li>
                             </ul>
                         </div>
                     </li>
 
                     <li class="right-menu">
-                        <a class="dd-button nav-link" href="graphic-design.html" type="button">
+                        <a class="dd-button nav-link" href="#" type="button">
                             Graphic Design
                         </a>
                         <div class="dd-menu">
                             <ul>
                                 <li>
-                                    <a class="dd-item" href="logo-design.html">Logo Design</a>
+                                    <a class="dd-item" href="#">Logo Design</a>
                                 </li>
                                 <li>
-                                    <a class="dd-item" href="boucher-design.html">Boucher Design</a>
+                                    <a class="dd-item" href="#">Boucher Design</a>
                                 </li>
                                 <li>
-                                    <a class="dd-item" href="leaf-let-flyer-design.html">Leaf/Let/Flyer Design</a>
+                                    <a class="dd-item" href="#">Leaf/Let/Flyer Design</a>
                                 </li>
                                 <li>
-                                    <a class="dd-item" href="banner-design.html">Banner Design</a>
+                                    <a class="dd-item" href="#">Banner Design</a>
                                 </li>
                                 <li>
-                                    <a class="dd-item" href="business-card-design.html">Business Card Design</a>
+                                    <a class="dd-item" href="#">Business Card Design</a>
                                 </li>
                             </ul>
                         </div>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="virtual-tour.html">Virtual Tour</a>
+                        <a class="nav-link" aria-current="page" href="#">Virtual Tour</a>
                     </li>
 
                     <div class="right-menu">
@@ -257,28 +261,28 @@
                         <div class="dd-menu">
                             <ul>
                                 <li>
-                                    <a class="dd-item" href="data-intelligence.html">Data Intelligence</a>
+                                    <a class="dd-item" href="#">Data Intelligence</a>
                                 </li>
                                 <li>
-                                    <a class="dd-item" href="data-profiling.html">Data Profiling</a>
+                                    <a class="dd-item" href="#">Data Profiling</a>
                                 </li>
                                 <li>
-                                    <a class="dd-item" href="market-research.html">Market Research</a>
+                                    <a class="dd-item" href="#">Market Research</a>
                                 </li>
                                 <li>
-                                    <a class="dd-item" href="lead-generation.html">Lead Generation</a>
+                                    <a class="dd-item" href="#">Lead Generation</a>
                                 </li>
                             </ul>
                         </div>
                     </div>
 
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="industries-we-served.html">industries we
+                        <a class="nav-link" aria-current="page" href="#">industries we
                             served</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="contact.html">Contact Us</a>
+                        <a class="nav-link" aria-current="page" href="#">Contact Us</a>
                     </li>
                 </ul>
             </div>
@@ -407,7 +411,7 @@
             <div class="col-6 col-md-4 col-lg-3 mx-auto">
                 <div class="d-flex flex-column justify-content-evenly align-items-center service-card">
                     <div class="icon shadow">
-                        <img src="images/" alt="Graphic Design" class="service-logo">
+                        <img src="images/Graphic Design.png" alt="Graphic Design" class="service-logo">
                     </div>
                     <div class="text text-center"><span>Graphic Design</span></div>
                 </div>
@@ -477,7 +481,7 @@
             <div class="col-6 col-md-4 col-lg-3 mx-auto">
                 <div class="d-flex flex-column justify-content-evenly align-items-center service-card">
                     <div class="icon shadow">
-                        <img src="images" alt="Lead Generation" class="service-logo">
+                        <img src="images/Lead Generation.png" alt="Lead Generation" class="service-logo">
                     </div>
                     <div class="text text-center"><span>Lead Generation</span></div>
                 </div>
